api/assets/css/style.css
/* ... */
#note-container .note-header button:hover{
	background:#286090;
}
#note-container .note-body{
	font-size:13px;
	display:none;
	height:430px;
	overflow:auto;
}
#note-container .note-body ul{
	padding:0;
	list-style-type:none;
}
#note-container .note-body ul li{
	padding:10px 5px;
	padding-left:55px;
	border-bottom:solid 1px #bce8f1;
	position:relative;
	min-height:52px;
	cursor:pointer;
	background:#e6f4fb;
}

#note-container .note-body ul li a{
	color:#000;
	outline:none;
	display:block;
}
#note-container .note-body ul li:hover a{
	color:#337AB7;
	text-decoration:none;
	outline:none;
}
#note-container .note-body ul li:hover{

	background:#D9EDF7;
}
#note-container .note-body ul li img{
	position:absolute;
	left:5px;
	top:5px;
	border:solid 1px #bce8f1;
}
#note-container .note-body ul li .datetime{
	float:right;
	font-size:12px;
	color:#666;
}
.btn-member .dropdown-menu{
	min-width:100px;
}






.panel-primary > .panel-heading{
	background:#00b582;
	border-color:#009380;
}
.panel-primary{
	border-color:#009380;
}

.btn-primary{
	background-color:#00b582;
	border-color:#009380;
}

.btn-primary:active:hover,
.btn-primary.active:hover,
.open > .dropdown-toggle.btn-primary:hover,
.btn-primary:active:focus, .btn-primary.active:focus,
.open > .dropdown-toggle.btn-primary:focus,
.btn-primary.focus:active,
.btn-primary.active.focus,
.open > .dropdown-toggle.btn-primary.focus,
.btn-primary:active, .btn-primary.active,
.open > .dropdown-toggle.btn-primary,
.btn-primary:focus,
.btn-primary:hover{
	background:#009380;
}
.table thead th{
	background:#00B582;
	color:#FFF;
}
.required{
	color:#F00;
	font-weight:bold;
	font-style:normal;
}
.company-logo{
	height:150px;
	width:150px;
	border:solid 2px #CCC;
	margin-bottom:15px;
	float:left;
	text-align:center;
}
.company-logo img{
	max-width:100%;
	max-height:100%;
}





body.dragging, body.dragging * {
  cursor: move !important;
}

.dragged {
  position: absolute;
  opacity: 0.5;
  z-index: 2000;
}

ol.location-list li.placeholder {
  position: relative;
  border:none;

  /** More li styles **/
}
ol.location-list li.placeholder:before {
	content:'';
	width:5px;
	position: absolute;
	width: 0;
	height: 0;
	border-style: solid;
	border-width: 5px 0 5px 8px;
	display:block;
	border-color: transparent transparent transparent #ff0000;
	left:-10px;
	margin-top:-8px;
  /** Define arrowhead **/
}

ol.location-list{
	list-style-type:none;
	padding:0;
	margin-top:20px;
	position:relative;
}
ol.location-list li{
	line-height:35px;
	padding:0 10px;
	border:solid 1px #CCC;
	background:#F5F5F5;
	margin-bottom:4px;
	border-radius:4px;
	font-size:12px;
	position:relative;
}
ol.location-list li:last-child{
	margin-bottom:0;
}
ol.location-list li i.delete{
	line-height:30px;
	font-size:16px;
	width:30px;
	text-align:center;
	position:absolute;
	right:0px;
	top:2.5px;
	cursor:pointer;
	color:rgba(0,0,0,.3);
}
ol.location-list li i.delete:hover{
	color: #F00;
}
.location-container{
	margin:0 -5px;
}
.location-container .location{
	width:20%;
	float:left;
	padding-left:5px;
	padding-right:5px;
}
.location-container .location .note{
	color:#999;
	text-align:center;
	font-size:11px;
	font-style:italic;
}

.form-box{
	margin:auto;
	width:600px;
	max-width:100%;
}
.btn.btn-primary.dropdown-toggle {
        height:34px;
}

ul.tsc_pagination { margin:4px 0; padding:0px; height:100%; overflow:hidden; font:12px 'Tahoma'; list-style-type:none; }
ul.tsc_pagination li { float:left; margin:0px; padding:0px; margin-left:5px; }

ul.tsc_pagination li a { color:black; display:block; text-decoration:none; padding:7px 10px 7px 10px; }


ul.tsc_paginationA li a { color:#FFFFFF; border-radius:3px; -moz-border-radius:3px; -webkit-border-radius:3px; }

ul.tsc_paginationA01 li a { color:#474747; border:solid 1px #B6B6B6; padding:6px 9px 6px 9px; background:#E6E6E6; background:-moz-linear-gradient(top, #FFFFFF 1px, #F3F3F3 1px, #E6E6E6); background:-webkit-gradient(linear, 0 0, 0 100%, color-stop(0.02, #FFFFFF), color-stop(0.02, #F3F3F3), color-stop(1, #E6E6E6)); }
ul.tsc_paginationA01 li:hover a,
ul.tsc_paginationA01 li.current a { background:#FFFFFF; }

